--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>SYED KHAJA OSMAN HAROON</h1>
         <h3>IT Admin | Linux Learner | Security Enthusiast</h3>
-        <p>Email: <a href="mailto:faizz.osman8@gmail.com">faizz.osman8@gmail.com</a></p>
+        <p>Email: <a href="mailto:faiz.osman8@gmail.com">faiz.osman8@gmail.com</a></p>
         <p>
             <a href="https://github.com/faizosman8-spec/">GitHub</a> |
             <a href="https://www.linkedin.com/in/sd-khaja-osman-haroon-5203559a">LinkedIn</a>
@@ -51,3 +51,4 @@
     </footer>
 </body>
 </html>
+
