--- a/index.html
+++ b/index.html
@@ -1,54 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SYED KHAJA OSMAN HAROON - Resume</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SYED KHAJA OSMAN HAROON - Resume</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <h1>SYED KHAJA OSMAN HAROON</h1>
-        <h3>IT Admin | Linux Learner | Security Enthusiast</h3>
-        <p>Email: <a href="mailto:faiz.osman8@gmail.com">faiz.osman8@gmail.com</a></p>
-        <p>
-            <a href="https://github.com/faizosman8-spec/">GitHub</a> |
-            <a href="https://www.linkedin.com/in/sd-khaja-osman-haroon-5203559a">LinkedIn</a>
-        </p>
-    </header>
+  <header>
+    <div class="profile-container">
+      <img src="images/profile.jpg" alt="Profile Photo" class="profile-photo">
+      <h1>SYED KHAJA OSMAN HAROON</h1>
+      <h3>IT Admin | Linux Learner | Security Enthusiast</h3>
+      <p>Email: <a href="mailto:faiz.osman8@gmail.com">faiz.osman8@gmail.com</a></p>
+      <p>
+        <a href="https://github.com/faizosman8-spec/" target="_blank">GitHub</a> |
+        <a href="https://www.linkedin.com/in/sd-khaja-osman-haroon-5203559a" target="_blank">LinkedIn</a>
+      </p>
+      <button class="theme-btn" onclick="toggleTheme()">🌙 Toggle Theme</button>
+    </div>
+  </header>
 
-    <main>
-        <section>
-            <h2>Skills</h2>
-            <ul>
-                <li>Linux</li>
-                <li>Windows Server</li>
-                <li>Networking</li>
-                <li>Docker</li>
-                <li>Active Directory</li>
-                <li>Server Optimization & Virtualization</li>
-                <li>Backup Solutions & Network Security</li>
-            </ul>
-        </section>
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>
+        Dedicated System Administrator with 8+ years of experience in Windows and Linux environments, 
+        specializing in network management, server optimization, and virtualization. Skilled in 
+        troubleshooting, automation, and proactive system stability with a focus on security 
+        and high availability.
+      </p>
+    </section>
 
-        <section>
-            <h2>Experience / Projects</h2>
-            <p>Dedicated System Administrator with 8+ years of experience in Windows and Linux environments, specializing in network management, server optimization, and virtualization. Proven expertise in Active Directory, backup solutions, and network security with a track record of enhancing system performance and reliability. Skilled in troubleshooting, automation, and user support, with a focus on proactive system stability and high availability.</p>
-        </section>
+    <section id="skills">
+      <h2>Skills</h2>
+      <div class="skills-grid">
+        <span>Linux</span>
+        <span>Windows Server</span>
+        <span>Networking</span>
+        <span>Docker</span>
+        <span>Active Directory</span>
+        <span>Server Optimization</span>
+        <span>Virtualization</span>
+        <span>Backup Solutions</span>
+        <span>Network Security</span>
+      </div>
+    </section>
 
-        <section>
-            <h2>Education</h2>
-            <ul>
-                <li>B.Tech (Electronics & Communication Engineering): 2010-2014</li>
-                <li>Board of Intermediate (MPC): 2008-2010</li>
-                <li>Board of Secondary High School: 2007-2008</li>
-            </ul>
-        </section>
-    </main>
+    <section id="experience">
+      <h2>Experience / Projects</h2>
+      <div class="experience-card">
+        <h3>System Administrator</h3>
+        <p>Managed Windows/Linux servers, implemented security policies, optimized performance, 
+           and supported enterprise IT operations ensuring high availability.</p>
+      </div>
+      <div class="experience-card">
+        <h3>Projects</h3>
+        <ul>
+          <li>Deployed Dockerized applications for faster CI/CD.</li>
+          <li>Implemented Active Directory and Group Policy management.</li>
+          <li>Configured backup solutions ensuring 99.9% data recovery success.</li>
+        </ul>
+      </div>
+    </section>
 
-    <footer>
-        <p>© 2025 SYED KHAJA OSMAN HAROON | <a href="https://github.com/faizosman8-spec/">GitHub</a></p>
-    </footer>
+    <section id="education">
+      <h2>Education</h2>
+      <ul>
+        <li><strong>B.Tech (Electronics & Communication Engineering)</strong> - 2010-2014</li>
+        <li><strong>Board of Intermediate (MPC)</strong> - 2008-2010</li>
+        <li><strong>Board of Secondary High School</strong> - 2007-2008</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 SYED KHAJA OSMAN HAROON | <a href="https://github.com/faizosman8-spec/">GitHub</a></p>
+  </footer>
+
+  <script>
+    function toggleTheme() {
+      document.body.classList.toggle("dark");
+      if (document.body.classList.contains("dark")) {
+        localStorage.setItem("theme", "dark");
+      } else {
+        localStorage.setItem("theme", "light");
+      }
+    }
+
+    window.onload = () => {
+      if (localStorage.getItem("theme") === "dark") {
+        document.body.classList.add("dark");
+      }
+    };
+  </script>
 </body>
 </html>
-
