--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="profile-container">
-      <img src="images/profile.jpg" alt="Profile Photo" class="profile-photo">
+      <img src="assets/images/profile.png" alt="Profile Photo" class="profile-photo">
       <h1>SYED KHAJA OSMAN HAROON</h1>
       <h3>IT Admin | Linux Learner | Security Enthusiast</h3>
       <p>Email: <a href="mailto:faiz.osman8@gmail.com">faiz.osman8@gmail.com</a></p>
@@ -96,3 +96,4 @@
   </script>
 </body>
 </html>
+
